--- a/index.css
+++ b/index.css
@@ -34,19 +34,43 @@ header .container{
     border-bottom: 1px solid black;
 }
 
+.mochilaModal{
+    width: 100%;
+    height: 100vh;
+
+    display: flex;
+    justify-content: center;
+
+    background-color: rgba(0, 0, 0, 0.1);
+
+    position: absolute;
+}
+
+.card{
+    width: 100%;
+    height: 100px;
+    max-width: 1000px;
+
+    margin-top: 20px;
+    background-color: white;
+
+    padding: 10px;
+    border-radius: 6px;
+}
+
 .dinheiro{
-    font-size: 40px;
+    font-size: 36px;
     color: black;
 }
 
-main{
+.main{
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-main .container{
+.mainc{
     width: 100%;
     max-width: 1000px;
     padding: 10px 20px;
